--- a/packages/package.json
+++ b/packages/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@miletorix/vitepress-html-preview",
-  "version": "0.0.2",
+  "version": "0.0.3",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/miletorix/vitepress-html-preview"
